# Yux_Project

./: .gitignore  MR4.py  README.md  Server.cpp  bug.md  check_gmp_version  check_gmp_version.c  count.txt  error.py  extensions-list.txt  find_para.py  findp.py  findp.txt  readme.md  table.txt  tableAlBl.txt  tableAmBm.txt  test  test.cpp  test2.cpp
CBSmode/: CMakeLists.txt
CBSmode/Yux/: AES.cpp  AES_KeyExpansion_tlwed.cpp  AES_homo.cpp  AES_homo2.cpp  CMakeLists.txt  README.md  Yux2.cpp  Yux2_homo.cpp  Yux2_homo_single.cpp
CKKS/Transcipher-Yux/Yux/: CMakeLists.txt  Client.cpp  Client.hpp  FHEtool.hpp  Makefile  Server.cpp  Server.hpp  main.cpp  params.hpp
StreamCipher/BGV-Symmetric/tests/: CMakeLists.txt  calculate.py  run.sh  test_Yus_p_C48_ClientAndServer3.cpp  test_Yus_p_C48_ClientAndServer3.txt  test_Yus_p_C64_ClientAndServer4.txt  test_Yus_p_C64_ClientAndServer4_calculate.txt  test_Yux_p_C16_ClientAndServer2.cpp
StreamCipher/BGV-Symmetric/tests/other/: run_Yus_p_C32.sh  test_Yus_p_C32_Serveron.cpp  test_Yus_p_C64_ClientAndServer.cpp  test_Yux2_8_C16_Serveron.cpp
StreamCipher/HElib-BGV/: CMakeLists.txt  README.md  cantor_expension  cantor_expension.cpp  count.txt  w.py
StreamCipher/HElib-BGV/Symmetric/: HERA.cpp  Hera.cpp  Hera.hpp  Pasta.hpp  Yus_p.cpp  Yus_p.hpp  autoFR.py  autoFR2.txt  autoFR_g.py  autoMC.py  autoMC.txt
StreamCipher/HElib-BGV/Symmetric/other/: Yux2_8.cpp
StreamCipher/HElib-BGV/plain/: Yux2_8.cpp
StreamCipher/HElib-BGV/tests/: CMakeLists.txt  Pasta2_3_plain.h  a.cpp  calculate.py  calculate_test_Yus_4.txt  run.sh  sort.py  temp.cpp  test_HERA.cpp  test_HERA.txt  test_HERA_4.cpp  test_HERA_4.txt  test_HERA_4_33.cpp  test_HERA_5.cpp  test_HERA_5.txt  test_HERA_5_33.cpp  test_Hera.cpp  test_Hera1.cpp  test_Yus_4.cpp  test_Yus_4.txt  test_Yus_4_33.cpp  test_Yus_5.cpp  test_Yus_5.txt  test_Yus_5_33.cpp  test_Yus_6.cpp  test_Yus_6.txt  test_Yus_6_33.cpp  test_Yus_p_C18_ClientAndServer8.cpp  test_Yus_p_C18_ClientAndServer8.txt  test_Yus_p_C18_ClientAndServer8_2.txt  test_Yus_p_C32_ClientAndServer.cpp  test_Yus_p_C36_ClientAndServer5.cpp  test_Yus_p_C36_ClientAndServer5.txt  test_Yus_p_C36_ClientAndServer5_2.cpp  test_Yus_p_C36_ClientAndServer5_2.txt  test_Yus_p_C36_ClientAndServer7.cpp  test_Yus_p_C36_ClientAndServer7.txt  test_Yus_p_C64_ClientAndServer6.txt  test_Yus_p_C64_ClientAndServer6_calculate.txt  test_Yux_14.cpp  (+18 more)
StreamCipher/HElib-BGV/tests/other/: pasta2_3.cpp  pasta2_3.hpp  test_Yus_p_C18_ClientAndServer8.cpp  test_Yus_p_C18_ClientAndServer8.txt  test_Yus_p_C18_ClientAndServer8_2.cpp  test_Yus_p_C32_ClientAndServer2.cpp  test_Yus_p_C36_ClientAndServer5_2.txt  test_Yus_p_C36_ClientAndServer5_old.cpp  test_Yus_p_C48_ClientAndServer3.cpp  test_Yus_p_C48_ClientAndServer3.txt  test_Yus_p_C64_ClientAndServer4.cpp  test_Yus_p_C64_ClientAndServer6.cpp  test_Yus_p_C64_ClientAndServer6_calculate.xlsx  test_Yux2_8_C16_Clientoff.cpp
StreamCipher/HElib-BGV/transciphering/: FHEtool_Yus_p.cpp  FHEtool_Yux_p.hpp  Server_Yus_p_C32.cpp  Server_Yux2_8_C16.cpp  params_Yux2_8.hpp
StreamCipher/HElib-BGV/utils/: tool.cpp  tool.hpp
StreamCipher/SEAL-BFV/: CMakeLists.txt
StreamCipher/SEAL-BFV/Symmetric/: HERA.hpp  Pasta.cpp  Yus_p.cpp  Yus_p.hpp  Yux_p.cpp  Yux_p.hpp  autoFR.py  autoFR1.txt  autoFR3.txt  split.py  split.txt
StreamCipher/SEAL-BFV/Symmetric/other/: Mul.py  autoMC.txt  optimze.py
StreamCipher/SEAL-BFV/examples/: __CMakeLists.txt
StreamCipher/SEAL-BFV/tests/: CMakeLists.txt  params.hpp  run.sh  test_HERA_4.cpp  test_HERA_4.txt  test_HERA_5.cpp  test_HERA_5.txt  test_Yus_4.cpp  test_Yus_4.cpp.txt  test_Yus_4.txt  test_Yus_5.cpp  test_Yus_5.txt  test_Yus_6.cpp  test_Yus_6.txt  test_pasta2_3.cpp  test_pasta2_3.txt  test_pasta2_4.cpp  test_pasta2_4.txt  test_pasta_3.cpp  test_pasta_4.cpp  test_pasta_4.txt  test_pasta_4copy.txt
StreamCipher/SEAL-BFV/utils/: tool.cpp  tool.hpp
StreamCipher/SEAL-BGV/: CMakeLists.txt
StreamCipher/SEAL-BGV/Symmetric/: Hera.hpp  Yus_p.cpp  Yus_p.hpp  Yux2_8.hpp  Yux_p.cpp  autoFR1.txt  autoFR3.txt  autoMC.txt
StreamCipher/SEAL-BGV/examples/: 4_bgv_basics.cpp  examples.h
StreamCipher/SEAL-BGV/tests/: CMakeLists.txt  test_Yus.cpp
StreamCipher/SEAL-BGV/utils/: random_bit.hpp  tool.cpp  tool.hpp
StreamCipher/Transcipher-Yux/: CMakeLists.txt  README.md
StreamCipher/Transcipher-Yux/Yux/: Yus_p.cpp  Yus_p.hpp  Yux_p.cpp  Yux_p.hpp  autoMC.py  autoMC.txt  random_bit.hpp  tool.cpp  tool.hpp
StreamCipher/Transcipher-Yux/Yux2/: Yu2x-16.cpp  Yu2x-16.h
StreamCipher/Transcipher-Yux/tests/: CMakeLists.txt  run_Yux2_8_C16.sh  test_Hera.cpp  test_Yus_p_C32_ClientAndServer.cpp  test_Yus_p_C32_ClientAndServer.txt  test_Yus_p_C32_ClientAndServer2.cpp  test_Yus_p_C32_ClientAndServer2.txt  test_Yus_p_C32_Clientoff.cpp  test_Yus_p_C32_Clienton.cpp  test_Yus_p_C32_Serveroff.cpp  test_Yus_p_C48_ClientAndServer3.cpp  test_Yus_p_C48_ClientAndServer3.txt  test_Yux2_8.cpp  test_Yux2_8_C1.cpp  test_Yux2_8_C16.cpp  test_Yux2_8_C16_Clienton.cpp  test_Yux2_8_C16_Serveroff.cpp  test_Yux_p_C16.cpp  test_context.cpp
StreamCipher/Transcipher-Yux/transciphering/: Client.cpp  Client.hpp  Client_Yus_p_C32.cpp  Client_Yus_p_C32.hpp  Client_Yux2_8_C1.cpp  Client_Yux2_8_C1.hpp  Client_Yux2_8_C16.cpp  Client_Yux2_8_C16.hpp  Client_Yux_p_C16.cpp  Client_Yux_p_C16.hpp  FHEtool.cpp  FHEtool.hpp  FHEtool_Yus_p.hpp  FHEtool_Yux2_8.cpp  FHEtool_Yux2_8.hpp  FHEtool_Yux_p.cpp  FHEtool_Yux_p.hpp  Server.cpp  Server.hpp  Server_Yus_p_C32.hpp  Server_Yux2_8_C1.cpp  Server_Yux2_8_C1.hpp  Server_Yux2_8_C16.cpp  Server_Yux2_8_C16.hpp  Server_Yux_p_C16.cpp  Server_Yux_p_C16.hpp  params.hpp  params_Yus_p.hpp  params_Yux2_8.hpp  params_Yux_p.hpp
StreamCipher/Transcipher-Yux/utils/: random_bit.hpp
StreamCipher/Transcipher-Yux/ztests2/: test-trans-Yu2x-8-C1.cpp  test-trans-Yupx-p-C16.cpp
StreamCipher/Transcipher-Yux/ztransciphering2/: params.h  trans-Yu2x-8-C4.cpp  trans-Yupx-p-C16.cpp  utils.cpp
TFHE/CBSmode/Yux/: CMakeLists.txt  Yux2.cpp  Yux2.hpp  Yux2_homo copy.cpp  Yux2_homo.cpp  Yux2_homo5.cpp  Yux2_homo_1.cpp  Yux2_homo_3.cpp
(+72 files in other folders)
